--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ a {
 
 img {
     display: block;
-    max-width: 100%;
+    max-width: 360px;
     height: auto;
 }
 
@@ -24,7 +24,7 @@ img {
 }
 
 .gallery-item {
-    width: calc((100% - 48px) / 3);
+    flex-basis: calc((100% - 48px) / 3);
     transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
